--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,11 @@ PRICE_USDC=0.005
 SERP_SERVICE_NAME=mobile-serp-tracker
 SERP_PRICE_USDC=0.003
 
+# Google Reviews & Business Data API (available at /api/reviews/*, /api/business/*)
+REVIEWS_PRICE_USDC=0.02
+BUSINESS_PRICE_USDC=0.01
+SUMMARY_PRICE_USDC=0.005
+
 PORT=3000
 RATE_LIMIT=60
 
